[post-up] stop linking to 404 on w3schools

--- a/_posts/2006-3-26-rails-newbie-bootstrapping-guide.textile
+++ b/_posts/2006-3-26-rails-newbie-bootstrapping-guide.textile
@@ -21,7 +21,7 @@ h3. The Vast Internet Wasteland
 If you're primarily a designer, or want to be, some suggested further reading includes "_The Zen of CSS Design_":http://www.amazon.com/gp/product/0321303474/, "_Web Standards Solutions_":http://www.amazon.com/gp/product/1590593812/, and "_Eric Myer on CSS_":http://www.amazon.com/gp/product/073571245X/. Then, you'll want to read "A Designer's Guide to Rails":http://glu.ttono.us/articles/2006/03/21/rails-for-designers. After that, while it's a good idea to check out the Rails material, you won't need to worry so much about the Ruby stuff, if you have coder(s) on your team to do that.
 </p></div>
 
-Before you learn Rails, you'll need to have a pretty good grasp of some other things. The biggest ones are HTML/XHTML and CSS, the foundational standards of the world wide web. A good place to start learning about them is at the W3C Schools "XHTML tutorial":http://www.w3schools.com/xhtml/ and "CSS Tutorial":http://www.w3schools.com/css/. Once you've completed those tutorials, you should have enough of an understanding to experiment, learn things, and move on to Ruby and Rails.
+Before you learn Rails, you'll need to have a pretty good grasp of some other things. The biggest ones are HTML/XHTML and CSS, the foundational standards of the world wide web. A good place to start learning about them is at the Mozilla Foundation's "introduction to HTML":https://developer.mozilla.org/en-US/docs/HTML/Introduction and "CSS tutorial":https://developer.mozilla.org/en-US/docs/CSS/Getting_Started. Once you've completed those tutorials, you should have enough of an understanding to experiment, learn things, and move on to Ruby and Rails.
 
 If you want a more in-depth treatment, or like dead-tree reference material, try the books on the subject published by O'Reilly publishers: "_HTML & XHTML_":http://www.amazon.com/gp/product/059600026X/ and "_Cascading Style Sheets_":http://www.amazon.com/gp/product/0596005253/.
 
