[post-up] fix subhead size

--- a/_posts/2014-02-19-rubyfuza-2014.md
+++ b/_posts/2014-02-19-rubyfuza-2014.md
@@ -2,7 +2,8 @@
 title: "RubyFuza 2014"
 layout: post
 ---
-## How to build the web with empathy for non-Americans
+
+### How to build the web with empathy for non-Americans
 
 ![Cape Town Beach]({% postfile beach.jpg %})
 
