un-absolute all the image and post URLs
this means that all the images (and inter-post links) now expect to live on the same domain as the posts themselves. should help with local dev and staging and etc

--- a/content/post/2014-02-19-rubyfuza-2014.md
+++ b/content/post/2014-02-19-rubyfuza-2014.md
@@ -5,7 +5,7 @@ title: RubyFuza 2014
 
 ### How to build the web with empathy for non-Americans
 
-![Cape Town Beach](https://andre.arko.net/2014/02/19/rubyfuza-2014/beach.jpg)
+![Cape Town Beach](beach.jpg)
 
 Hey there everyone! Here's another entry in my ongoing conference travelogues. This time, I went to Cape Town in South Africa, to speak at the RubyFuza conference. It was a great experience, and really brought home some important development concepts that I've heard about in the abstract but rarely experienced myself. The conference had speakers from all over the world, including Oregon, California, and Massachusetts, as well as Denmark, India, and (of course) South Africa.
 
